--- a/nexura-generator-demo-project/springboot-init/src/main/resources/application.yml
+++ b/nexura-generator-demo-project/springboot-init/src/main/resources/application.yml
@@ -31,13 +31,13 @@ spring:
     host: localhost
     port: 6379
     timeout: 5000
-#    password: 123456
+#    password: redis
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
   elasticsearch:
     uris: http://43.143.20.63:9200
-    username: root
-    password: 123456
+    username: elastic
+    password: elastic123
   # 文件上传
   servlet:
     multipart:
